	Fixed bug in IE where trailing comma in paste plugin would cause plugin to not run correctly.
	Fixed bug in WebKit where console messages would be logged when deleting an empty document.
	Fixed bug in IE8 where caret positioned is on list item instead of paragraph when outdent splits the list
	Fixed bug with image dialogs not inserting an image if id was omitted from valid_elements.
Version 3.4.4 (2011-08-04)
	Added new html5 audio support. Patch contributed by Ronald M. Clifford.
	Added mute option for video elements and preload options for video/audio patch contributed by Dmitry Kalinkin.
	Fixed selection to match visual selection before applying formatting changes.
	Fixed browser specific bugs in lists for WebKit and IE.
	Fixed bug where IE would scroll the window if you closed an inline dialog that was larger than the viewport. Patch by Laurence Keijmel.
	Fixed bug where pasting contents near a span element could remove parts of that span. Patch contributed by Wesley Walser.
	Fixed bug where formatting change would be lost after pressing enter.
	Fixed bug in WebKit where deleting across blocks would add extra styles.
	Fixed bug where moving cursor vertically in tables in WebKit wasn't working.
	Fixed bug in IE where deleting would cause error in console.
	Fixed bug where the formatter was not applying formats across list elements.
	Fixed bug where the wordcount plugin would try and update the wordcount if tinymce had been destroyed.
	Fixed bug where tabfocus plugin would attempt to focus elements not displayed when their parent element was hidden.
	Fixed bug where the contentEditable state would sometimes be removed if you deleted contents in Gecko.
	Fixed bug where inserting contents using mceInsertContent would fail if "span" was disabled in valid_elements.
	Fixed bug where initialization might fail if some resource on gecko wouldn't load properly and fire the onload event.