@@ -3,6 +3,7 @@ Version 3.4.4.x (2011-08-xx)
 	Fixed bug in WebKit where console messages would be logged when deleting an empty document.
 	Fixed bug in IE8 where caret positioned is on list item instead of paragraph when outdent splits the list
 	Fixed bug with image dialogs not inserting an image if id was omitted from valid_elements.
+	Fixed bug where the selection normalization logic wouldn't properly handle image elements in specific config cases.
 Version 3.4.4 (2011-08-04)
 	Added new html5 audio support. Patch contributed by Ronald M. Clifford.
 	Added mute option for video elements and preload options for video/audio patch contributed by Dmitry Kalinkin.
